# bec-fc-agent

./: .gitignore  CHECK_DEPLOY_LOGS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_ATTEMPT_LOG.md  DEPLOY_STATUS_CHECK.md  Dockerfile  FC_DEPLOY_READY.md  FC_DEPLOY_STATUS.md  FC_DEPLOY_SUCCESS.md  FC_NOT_FOUND_SOLUTION.md  FC_QUICKSTART.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  docker-compose.yml  fix-deploy.sh  pyproject.toml  requirements-dev.txt  requirements-fc.txt  requirements.txt
config/: .env.example  default.yaml  development.yaml  production.yaml
docs/: .env.example  ALIYUN_FC_REQUIREMENTS.md  DEPLOYMENT.md  FC_DEPLOYMENT.md  IMPLEMENTATION_CHECKLIST.md  Makefile  NGINX_DEPLOYMENT.md  PROVIDER_USAGE.md  REACT_WEB_UI_PLAN.md  README-部署版.md  SECURITY_DESIGN.md  api-spec.md  backend-technical-design.md  backend.env.example  bec-sprint-plan.md  database-docker-low-spec.md  database-technical-design.md  datahive-site-deployment.md  deployment-runbook.md  deployment-strategy.md  docker-compose.secure.yml  docker-compose.yml  domain-ssl-security-checklist.md  fc-business-write-validation.md  fc-deployment.md  fc-function-auth-access-plan.md  fc-http-trigger-function-auth-findings.md  fc-security-requirements.md  field-dictionary.md  frontend-technical-design.md  frontend.env.example  go-live-checklist.md  nginx-config-draft.md  nginx.conf  pg_hba.conf  postgresql.conf  requirements.md  schema.sql  security-checklist.md  seed.sql  (+5 more)
fc-code/: Dockerfile  ai_client.py  index.py  main.py
fc-config/: s.yaml
frontend/: .eslintrc.cjs  README.md  index.html  package-lock.json  (+2 more)
(+123 files in other folders)
